# controllers/userController.js
@@ -8,6 +8,17 @@ const User = require('../models/userModel');
 
 // @desc | GET => Get all users
 exports.getAllUsers = (req, res) => {
+    /// SWAGGER START ///
+    // #swagger.tags = ['Users']
+    // #swagger.summary = 'Get all users'
+    // #swagger.description = 'Endpoint used to fetch all users'
+    /* #swagger.security = [{
+            "oAuthSample": [
+                "write",
+                "read"
+            ]
+        }] */
+    /// SWAGGER END ///
     try {
         User.find()
             .then((allUserData) => {
@@ -25,6 +36,11 @@ exports.getAllUsers = (req, res) => {
 
 // @desc | GET => Get a single user
 exports.getSingleUser = (req, res) => {
+    /// SWAGGER START ///
+    // #swagger.tags = ['Users']
+    // #swagger.summary = 'Get single user'
+    // #swagger.description = 'Endpoint used to fetch a single user | userId required'
+    /// SWAGGER END ///
     try {
         const userId = req.params.userId;
         User.findById(userId)
@@ -43,6 +59,11 @@ exports.getSingleUser = (req, res) => {
 
 // @desc | POST => Create a user
 exports.createUser = (req, res) => {
+    /// SWAGGER START ///
+    // #swagger.tags = ['Users']
+    // #swagger.summary = 'Create user'
+    // #swagger.description = 'Endpoint used to create a user'
+    /// SWAGGER END ///
     try {
         const newUser = {
             firstName: req.body.firstName,
@@ -74,6 +95,11 @@ exports.createUser = (req, res) => {
 
 // @desc | PUT => Update a user
 exports.updateUser = async (req, res) => {
+    //// SWAGGER START ///
+    // #swagger.tags = ['Users']
+    // #swagger.summary = 'Update user'
+    // #swagger.description = 'Endpoint used to update a single user | userId required'
+    /// SWAGGER END ///
     try {
         const userId = req.params.userId;
         User.findById(userId)
@@ -105,6 +131,11 @@ exports.updateUser = async (req, res) => {
 
 // @desc | DELETE => Delete a user
 exports.deleteUser = (req, res) => {
+    /// SWAGGER START ///
+    // #swagger.tags = ['Users']
+    // #swagger.summary = 'Delete user'
+    // #swagger.description = 'Endpoint used to delete a single user | userId required'
+    /// SWAGGER END ///
     try {
         const userId = req.params.userId;
         User.findByIdAndRemove(userId)
