# routes/index.js
@@ -1,7 +1,9 @@
 // core mods
 // addon mods
 const express = require('express');
-const { requiresAuth } = require('express-openid-connect');
+const {
+  requiresAuth
+} = require('express-openid-connect');
 // custom mods
 
 // use router
@@ -10,9 +12,9 @@ const router = express.Router();
 // -------------------- //
 // S T A R T    C O D E //
 
-router.get('/', (req, res) => {
-  res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
-});
+// router.get('/', (req, res) => {
+//   res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
+// });
 
 router.use('/', require('./swagger'));
 router.use('/movies', require('./movieRoutes'));
